--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,45 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //Design library for Coordinator Layout and Toolbars
+    implementation 'com.android.support:design:27.0.2'
+    //ExifInterface support
+    implementation 'com.android.support:exifinterface:27.0.2'
+    //design library for Coordinator Layout
+    implementation 'com.android.support:design:27.0.2'
+    //Exo Player
+    implementation 'com.google.android.exoplayer:exoplayer:2.6.0'
+    //cardview
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    //recyclerview
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    //BottomNavigationViewEx library
+    //implementation 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
+
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    //elastic header
+    //compile 'com.github.eschao:android-ElasticListView:v1.0'
+
+
+    /*//material dialogs
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation files('libs/aspectjrt-1.7.3 (1).jar')*/
+    //Universal image loader
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //firebase authentication
+    compile 'com.google.firebase:firebase-auth:10.2.6'
+    //firebase database
+    compile 'com.google.firebase:firebase-database:10.2.6'
+    //firebase storage
+    compile 'com.google.firebase:firebase-storage:10.2.6'
+    //compile files('libs/aspectjrt-1.7.3 (1).jar')
 }
