--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             android:launchMode="singleInstance"/>
         <activity android:name=".search.SearchActivity"
             android:launchMode="singleInstance"/>
+        <activity android:name=".profile.AccountSettingsActivity"
+            android:launchMode="singleInstance"/>
     </application>
 
 </manifest>
