Update authentication: login and logout - using firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:launchMode="singleInstance"/>
         <activity android:name=".profile.AccountSettingsActivity"
             android:launchMode="singleInstance"/>
+        <activity android:name=".login.LoginActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".login.RegisterActivity"
+            android:launchMode="singleInstance"/>
     </application>
 
 </manifest>
