--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     package="com.uit.instagram">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,6 +35,8 @@
         <activity android:name=".login.LoginActivity"
             android:launchMode="singleInstance"/>
         <activity android:name=".login.RegisterActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".share.NextActivity"
             android:launchMode="singleInstance"/>
     </application>
 
