--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
+    }
+}
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -28,6 +36,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.0.0'
@@ -38,12 +49,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //Design library for Coordinator Layout and Toolbars
-    implementation 'com.android.support:design:27.0.2'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
     //ExifInterface support
     implementation 'com.android.support:exifinterface:27.0.2'
-    //design library for Coordinator Layout
-    implementation 'com.android.support:design:27.0.2'
     //Exo Player
     implementation 'com.google.android.exoplayer:exoplayer:2.6.0'
     //cardview
@@ -51,7 +61,8 @@ dependencies {
     //recyclerview
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     //BottomNavigationViewEx library
-    //implementation 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+    implementation "com.android.support:design:28.0.0"
 
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:2.1.0'
